# tauri

./: app.json  metro.config.js  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
